umbrella-charts/kyverno-policies/templates/validate-podsecurity-restricted.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: podsecurity-restricted
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Validate Pod Security Standards of type restricted
spec:
  background: true
  rules:
  - name: restricted
    match:
      any:
      - resources:
          kinds:
          - Pod
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: false
      failureAction: Enforce
      podSecurity:
        level: restricted
        version: latest
